LU-16491 lfs: test getdirstripe YAML

Add a test to ensure that getdirstripe
is outputting valid YAML for layouts.

Fix the verbose flag for getdirstripe
by changing the verbose enum used. The
verbose flag is used in the test.

Add some parenthesis to improve readability.

Signed-off-by: Timothy Day <timday@amazon.com>
Change-Id: Ic862a039ab01b004f212bd168d9e28de4fee15c4
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/50208
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Andreas Dilger <adilger@whamcloud.com>
Reviewed-by: Arshad Hussain <arshad.hussain@aeoncomputing.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>